4661
(In r22851) partial fix for see scala/bug#3772. remaining problem is when the explicit companion object is specified after the class:
```scala
  scala> def g { case class C(); object C; }
  <console>:5: error: C is already defined as (compiler-generated) case class companion object C
         def g { case class C(); object C; }
                                        ^
```

review by odersky
